--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,7 @@
     <link href="./css/styles.css" ref="stylesheet"/>
     <title><%= title %> </title>
 <body>
-    <main class="m-8 " style="background-color: #6c6c7f24; height:90vh;">
+    <main class="h-screen " style="background-color: #6c6c7f24; ">
         <%- include('header.ejs',{admin:null})%>
         <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style=" margin-top: 20px; width: 500px;">
             <div class="mx-auto flex  flex-col	">
