--- a/views/displayVoters.ejs
+++ b/views/displayVoters.ejs
@@ -1,61 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <title><%=title%></title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <div class="grid pt-5 mt-5">
-        <div class="col-start-2 col-span-2">
-          <%
-          var data=[
-    {label:"Home",url:"/elections",current:false},
-    {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
-    {label:`Voters`,url:`/elections/${election.id}/voters`,current:true},
 
-    ]
-          %>
-          <%- include('navigation.ejs',{data:data})%>
-      <div>
-        <h1 class="text-2xl font-bold text-gray-600"><%=election.title%></h1>
-        <div>
-        <% if(voters.length > 0){%>
-          <p>You have created <%=voters.length%> voters</p>
-          <%}%>
-       </div>
-      
-       <form method="post" action="/elections/<%=election.id%>/voters">
-        <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="csrf-token" content="<%= csrfToken %>" />
+  <title>
+    <%=title%>
+  </title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
+    var currentId;
+    function updateVoter(id, content) {
+      fetch(`/voters/${id}`, {
+        method: 'put',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          content,
+          _csrf: token
+        })
+      }).then((res) => {
+        if (res.ok) {
+          window.location.reload();
+        }
+      }).catch((err) => console.log(err))
+    }
+    function deleteVoter(id) {
+      var result = confirm("Are you sure?")
+      if (result) {
+        fetch(`/voters/${id}`, {
+          method: 'delete',
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            _csrf: token
+          })
+        }).then((res) => {
+          if (res.ok) {
+            window.location.reload();
+          }
+        }).catch((err) => console.log(err))
+      }
+    }
+  </script>
+</head>
 
-        <div class="pt-3">
-            <input type="text" name="voter_Id" class="border border-gray-300 text-gray-900 rounded p-2 " placeholder="Voter Id"/>
-            <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 " placeholder="password"/>
-            <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 mt-5">Submit</button>
+<body>
+  <main class=" h-screen pb-5" style="background-color: #6c6c7f24; ">
+    <%-include('header.ejs',{admin:admin})%>
 
+      <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
+        style=" margin: 30px auto; height: 75%; width: 75%;">
+        <div class="mx-auto">
+          <% var data=[ {label:"Home",url:"/elections",current:false},
+            {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
+            {label:`Voters`,url:`/elections/${election.id}/voters`,current:true}, ] %>
+            <%- include('navigation.ejs',{data:data})%>
+              <div class="flex justify-between">
+               
+                <div >
+                  <h1 class="mt-3 text-2xl font-semibold text-gray-600 inlin-block">
+                    <%=election.title%>
+                  </h1>
+                  <div class="py-3">
+
+                  </div>
+                </div>
+                
+                <div class="inline-block">
+                  <form method="post" action="/elections/<%=election.id%>/voters">
+                    <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+
+                    <div>
+                      <input type="text" name="voter_Id" class="border border-gray-300 text-gray-900 rounded p-2 "
+                        placeholder="Voter Id" />
+                      <input type="password" name="password" class="border border-gray-300 text-gray-900 rounded p-2 "
+                        placeholder="password" />
+                      <button type="submit"
+                        class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 mt-5">ADD</button>
+
+                    </div>
+
+                    <div>
+                      <%-include("errorMsg.ejs")%>
+
+                    </div>
+
+                  </form>
+                </div>
+
+              </div>
+              <div>
+                <% if(voters.length== 0){%>
+                  <p class="text-lg text-gray-500">You have't created any voters</p>
+                  <%}%>
+
+                    <% if(voters.length> 0){%>
+                      <p class="text-lg text-gray-500">You have created <span class="text-gray-900 font-semibold"><%=voters.length%> </span>voters</p>
+
+                      <p class="text-xl font-bold text-green-600">List of voters you created</p>
+                        <table class="text-left w-full mt-5 overflow-y-scroll">
+                          <thead class="bg-black flex text-white w-full" style="background-color: black;">
+                            <tr class="flex w-full mb-4">
+                              <th class='px-4 py-2 w-1/4 text text-lg'>No.</th>
+                              <th class='px-4 py-2 w-1/3 text-lg'>Voter Name</th>
+                              <th class='px-4 py-2 w-1/4 text-lg'>Actions</th>
+                            </tr>
+                          </thead>
+                          <!-- Remove the nasty inline CSS fixed height on production and replace it with a CSS class — this is just for demonstration purposes! -->
+                          <tbody class="bg-grey-light flex flex-col items-center justify-start overflow-y-auto w-full"
+                            style="height: 40vh;">
+
+                            <%for(var i=0;i<voters.length;i++){%>
+                              <tr class="flex w-full mb-4">
+                                <td class="p-4 w-1/4 text-lg">
+                                  <%=i+1%>
+                                </td>
+
+                                <td class="p-4 w-1/3 text-lg">
+                                  <%=voters[i].voter_Id%>
+                                </td>
+                                <td class="p-4 w-1/4">
+                                  <div class="flex justify-between">
+                                    <button data-modal-target="authentication-modal"
+                                      data-modal-toggle="authentication-modal">
+                                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-green-600">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                                      </svg></button>
+                                    <a href='' onclick="deleteVoter('<%=voters[i].id%>')">
+                                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-red-600">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                                      </svg>
+                                    </a>
+
+                                  </div>
+                                </td>
+
+                              </tr>
+                              <%}%>
+                          </tbody>
+                        </table>
+                        <%}%>
+              </div>
         </div>
-        
-        <div class="p-3">
-          <%-include("errorMsg.ejs")%>
-
-        </div>
-
-    </form>      </div>
-    <div>
-        <% if(voters.length > 0){%>
-            <p>List of voters you created</p>
-            <%}%>
-       </div>
-    <ul class="list-disc">
-        <%for(var i=0;i<voters.length;i++){%>
-          <li class="text-blue-600 block ml-5"><%=voters[i].voter_Id%></li>
-          <%}%>
-       </ul>
       </div>
-    </div>
-  </body>
-</html>
+</body>
 
+</html>
