--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="csrf-token" content="<%= csrfToken %>" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
 
   <title>
     <%=title%>
@@ -29,7 +27,10 @@ body{
   <script>
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     var currentId;
+    var selectedRow;
     function updateElection(id, title) {
+
+      console.log(title)
       fetch(`/elections/${id}`, {
         method: 'put',
         headers: { "Content-Type": "application/json" },
@@ -44,6 +45,9 @@ body{
       }).catch((err) => console.log(err))
     }
     function deleteElection(id) {
+      var result = confirm("Are you sure?")
+      if(result){
+        // const confilrm =  document.getElementById("confirmDelete").value
       fetch(`/elections/${id}`, {
         method: 'delete',
         headers: { "Content-Type": "application/json" },
@@ -55,6 +59,8 @@ body{
           window.location.reload();
         }
       }).catch((err) => console.log(err))
+      }
+ 
     }
   </script>
 </head>
@@ -71,7 +77,7 @@ body{
                 <p class="py-2 text-2xl font-bold text-gray-600">Welcome <%=admin.firstName%>
                     <%=admin.lastName%>
                 </p>
-                <div class="p-2 bg-green-600 rounded hover:bg-green-500">
+                <div class="p-3 bg-green-600 rounded hover:bg-green-500">
                   <a href="/elections/createElections/new" class="text-white text-lg">Create new election</a>
                 </div>
 
@@ -81,7 +87,7 @@ body{
                   <p class="text-lg text-gray-500">You haven't created any elections</p>
                   <%}%>
                     <%if(elections.length> 0){%>
-                      <p class="text-lg text-gray-500">You have created <%=elections.length%> elections</p>
+                      <p class="text-lg text-gray-500">You have created <span class="text-gray-900 font-semibold"><%=elections.length%></span> elections</p>
                       <%}%>
 
               </div>
@@ -95,7 +101,7 @@ body{
                     </tr>
                   </thead>
                   <!-- Remove the nasty inline CSS fixed height on production and replace it with a CSS class — this is just for demonstration purposes! -->
-                  <tbody class="bg-grey-light flex flex-col items-center justify-between overflow-y-auto w-full"
+                  <tbody class="bg-grey-light flex flex-col items-center justify-start overflow-y-auto w-full"
                   style="height: 40vh;" >
                     <%for(var i=0;i<elections.length;i++){%>
 
@@ -133,45 +139,10 @@ body{
                   </tbody>
                 </table>
                 <%}%>
-                  <!-- Todo work on passing the id to the modal -->
-                  <div id="popup-modal" tabindex="-1"
-                    class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full">
-                    <div class="relative w-full h-full max-w-md md:h-auto">
-                      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                        <button type="button"
-                          class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
-                          data-modal-hide="popup-modal">
-                          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                              clip-rule="evenodd"></path>
-                          </svg>
-                          <span class="sr-only">Close modal</span>
-                        </button>
-                        <div class="p-6 text-center">
-                          <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200"
-                            fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                          </svg>
-                          <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to
-                            delete this product?</h3>
-                          <button data-modal-hide="popup-modal" type="button"
-                            class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
-                            Yes, I'm sure
-                          </button>
-                          <button data-modal-hide="popup-modal" type="button"
-                            class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">No,
-                            cancel</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- update popup -->
+                 
 
                   <!-- Main modal -->
+                  <%for(var i=0;i<elections.length;i++){%>
                   <div id="authentication-modal" tabindex="-1" aria-hidden="true"
                     class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full">
                     <div class="relative w-full h-full max-w-md md:h-auto">
@@ -190,7 +161,9 @@ body{
                         </button>
                         <div class="px-6 py-6 lg:px-8">
                           <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Edit Election</h3>
-                          <form class="space-y-6" action="#">
+                          <form class="space-y-6" action="" method="" onsubmit="event.preventDefault();(updateElection('<%=elections[i].id%>'))">
+                            <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
+
                             <div>
                               <label for="title"
                                 class="block mb-2 text-md font-medium text-gray-900 dark:text-white">Title</label>
@@ -200,13 +173,14 @@ body{
                             </div>
 
                             <button type="submit"
-                              class="w-full text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-md px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Submit</button>
+                              class="w-full text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-md px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">SUBMIT</button>
 
                           </form>
                         </div>
                       </div>
                     </div>
                   </div>
+                  <%}%>
         </div>
       </div>
   </main>
