--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  </head>
   <body>
-    <main class="m-8 " style="background-color: #6c6c7f24; height:90vh;">
+    <main class="h-screen" style="background-color: #6c6c7f24; ">
      <%-include('header.ejs',{admin:null})%>
     
-      <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style="width: 500px; margin-top: 30px; height: 70%; width: 45%;">
-        <div class="mx-auto flex items-center flex-col	mt-5 ">
+      <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md " style="margin-top: 5rem; height: 60%; width: 45%;">
+        <div class="mx-auto flex items-center flex-col	mt-5 justify-center">
           <p class="py-2 text-2xl font-bold">Welcome to the Voting Manager</p>
           <p class="py-2 text-xl">
             New here? <a href="/signup" class="text-green-600 font-bold">Sign-Up</a>
