--- a/views/manageQuestions.ejs
+++ b/views/manageQuestions.ejs
@@ -1,46 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <title><%=title%></title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <div class="grid grid-cols-6 pt-5 mt-5">
-        <div class="col-start-2 col-span-2">
-          <%
-          var data=[
-    {label:"Home",url:"/elections",current:false},
-    {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
-    {label:`Questions`,url:`/elections/${election.id}/questions`,current:true},
 
-    ]
-          %>
-          <%- include('navigation.ejs',{data:data})%>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="csrf-token" content="<%= csrfToken %>" />
+  <title>
+    <%=title%>
+  </title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
+    var currentId;
+    function updateQuestion(id, title) {
+      fetch(`/questions/${id}`, {
+        method: 'put',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          title,
+          _csrf: token
+        })
+      }).then((res) => {
+        if (res.ok) {
+          window.location.reload();
+        }
+      }).catch((err) => console.log(err))
+    }
+    function deleteQuestion(id) {
+      var result = confirm("Are you sure?")
+      if(result){
+      fetch(`/questions/${id}`, {
+        method: 'delete',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          _csrf: token
+        })
+      }).then((res) => {
+        if (res.ok) {
+          window.location.reload();
+        }
+      }).catch((err) => console.log(err))
+    }}
+  </script>
+</head>
 
-            <h1 class="text-2xl font-semibold text-gray-600"><%=election.title%></h1>
-            <div>
-              <% if(questions.length==0){%>
-                 <p>You haven't created any questions</p>
-               <%}%>
-               <% if(questions.length > 0){%>
-                 <p>Your election has <%=questions.length%> questions in the ballot</p>
-                 <%}%>
-              </div>  
-              <ul class=" list-disc">
-                <%for(var i=0;i<questions.length;i++){%>
-                 <li class="ml-8"><a href="/questions/<%=questions[i].id%>" class="text-blue-600 block"><%=questions[i].title%></a></li> 
+<body>
+  <main class=" h-screen pb-5" style="background-color: #6c6c7f24; ">
+    <%-include('header.ejs',{admin:admin})%>
+      <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
+        style=" margin: 30px auto; height: 75%; width: 75%;">
+        <div class="mx-auto">
+          <% var data=[ {label:"Home",url:"/elections",current:false},
+            {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
+            {label:`Questions`,url:`/elections/${election.id}/questions`,current:true}, ] %>
+            <%- include('navigation.ejs',{data:data})%>
+
+              
+              <div class="flex justify-between mt-3">
+                <h1 class="text-2xl font-semibold text-gray-600">
+                  <%=election.title%>
+                </h1>
+                <div class="p-3 bg-green-600 rounded hover:bg-green-500">
+                  <a href="/elections/<%=election.id%>/questions/new" class="text-white text-lg">Create question</a>
+                </div>
+
+              </div>
+              <div>
+                <% if(questions.length==0){%>
+                  <p class="text-lg text-gray-500">You haven't created any questions</p>
                   <%}%>
-               </ul class="">
-                  <div>
-        <a href="/elections/<%=election.id%>/questions/new" class="text-green-600">Create questions</a>
+                    <% if(questions.length> 0){%>
+                      <p class="text-lg text-gray-500">Your election has <span class="font-semibold text-gray-900"><%=questions.length%></span> questions in the ballot</p>
+                      <table class="text-left w-full mt-5 overflow-y-scroll">
+                        <thead class="bg-black flex text-white w-full" style="background-color: black;">
+                          <tr class="flex w-full mb-4">
+                            <th class='px-4 py-2 w-1/4 text text-lg'>No.</th>
+                            <th class='px-4 py-2 w-1/3 text-lg'>Question Name</th>
+                            <th class='px-4 py-2 w-1/3 text-lg'>Question Description</th>
+                            <th class='px-4 py-2 w-1/4 text-lg'>Actions</th>
+                          </tr>
+                        </thead>
+                        <!-- Remove the nasty inline CSS fixed height on production and replace it with a CSS class — this is just for demonstration purposes! -->
+                        <tbody class="bg-grey-light flex flex-col items-center justify-start overflow-y-auto w-full"
+                          style="height: 40vh;">
+                          <%for(var i=0;i<questions.length;i++){%>
 
+                            <tr class="flex w-full mb-4">
+                              <td class="p-4 w-1/4 text-lg">
+                                <%=i+1%>
+                              </td>
+                              <td class="p-4 w-1/3 text-lg">
+                                <a href="/questions/<%=questions[i].id%>" class="text-blue-600 ">
+                                  <%=questions[i].title%>
+                                </a>
+                              </td>
+                              <td class="p-4 w-1/3 text-lg">
+                                <%=questions[i].description%>
+                              </td>
+                              <td class="p-4 w-1/4">
+                                <div class="flex justify-between">
+                                  <button data-modal-target="authentication-modal"
+                                    data-modal-toggle="authentication-modal">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                      stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-green-600">
+                                      <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                                    </svg></button>
+                                  <a href='' onclick="deleteQuestion('<%=questions[i].id%>')">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                      stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-red-600">
+                                      <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                                    </svg>
+                                  </a>
+
+                                </div>
+                              </td>
+
+                            </tr>
+
+                            <%}%>
+                        </tbody>
+                      </table>
+                      <%}%>
+              </div>
+
+             
+        </div>
       </div>
-      </div>
-    </div>
-  </body>
+  </main>
+</body>
+
 </html>
-
