--- a/views/voterLogin.ejs
+++ b/views/voterLogin.ejs
@@ -9,16 +9,16 @@
     <link href="./css/styles.css" ref="stylesheet"/>
     <title><%= title %> </title>
 <body>
-    <main class="m-8 " style="background-color: #6c6c7f24; height:90vh;">
+    <main class="h-screen " style="background-color: #6c6c7f24; ">
         <%- include('header.ejs',{admin:null})%>
         <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style="width: 500px; margin-top: 30px; height: 70%; width: 500px;">
             <div class="mx-auto flex  flex-col	mt-5 ">
-                <h6 class="py-3 text-center text-2xl font-bold text-green-600">Vote</h6>
+                <h6 class="py-3 text-center text-2xl font-bold text-green-600">Sign In</h6>
                 <form action="/session" method="post">
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
                    
                    <div class="py-3">
-                    <label for="voter_Id">voter_Id</label>
+                    <label for="voter_Id">Voter Id</label>
                     <input type="voter_Id" name="voter_Id" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
                    </div>
                    <div class="py-3"> 
