--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,6 +39,8 @@
                 </form>
                 <p class="py-2 text-lg" >
                     New here? <a href="/signup" class="text-green-600 font-bold text-lg">Sign-Up</a>
+                  </p><p class="py-2 text-lg" >
+                 <a href="/forgotPassword" class="text-green-600 font-bold text-lg">Forgot Password?</a>
                   </p>
                 <%-include("errorMsg.ejs")%>
             </div>
