--- a/views/previewResult.ejs
+++ b/views/previewResult.ejs
@@ -79,7 +79,7 @@
                 return el.Question.id == 29
               })
                 %>
-                <% filtered.forEach((element)=> {
+                <% parR.forEach((element)=> {
 
                   arr.push({x:element.Answer.content,value:element.votes})
                   %>
