--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  
   <main class=" h-screen" style="background-color: #6c6c7f24; ">
     <%-include('header.ejs',{admin:null})%>
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
@@ -22,7 +23,7 @@
               <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
                 <h1 class="text-gray-600 text-2xl font-semibold text-center">Reset Password</h1>
-                <form method="post" action='admins/resetPassword/cdcc8b23ccc55fc54d9288fcbbb7a9d376f484c19e5f4980657dc3dd6f75daa6'>
+                <form method="post" action='<%=token%>'>
                   <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
                   <div class="p-3">
                     <label for="password" class="text-gray-600 text-lg py-2">Enter new password</label>
