--- a/views/createQuestions.ejs
+++ b/views/createQuestions.ejs
@@ -40,7 +40,7 @@
                   </div>
                   <div class="p-3">
                     <button type="submit"
-                      class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">Submit</button>
+                      class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">SUBMIT</button>
                   </div>
                 </form>
                 <%-include("errorMsg.ejs")%>
