--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -28,6 +28,13 @@ body{
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     var currentId;
     var selectedRow;
+    $(document).ready(function () {
+
+const element = document.getElementById("select1")
+const ck = element.options[element.selectedIndex].value
+var x = 0;
+
+})
     function updateElection(id, title) {
 
       console.log(title)
@@ -120,12 +127,12 @@ body{
                           </td>
                         <td class="p-4 w-1/4">
                           <div class="flex justify-between">
-                            <button data-modal-target="authentication-modal-<%=elections[i].id%>" data-modal-toggle="authentication-modal">
+                            <a href="/elections/<%=elections[i].id%>/edit">
                               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-5 h-6 stroke-green-600">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
-                              </svg></button>
+                              </svg></a>
                             <a href='' onclick="deleteElection('<%=elections[i].id%>')">
                               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-5 h-6 stroke-red-600">
