--- a/views/editAnswers.ejs
+++ b/views/editAnswers.ejs
@@ -23,19 +23,21 @@
                 <div class="mx-auto">
                     <% var data=[ {label:"Home",url:"/elections",current:false},
                          {label:`Edit
-                        Election`,url:`/elections/${election.id}/edit`,current:true}, ] %>
+                        Question`,url:`/questions/${question.id}/edit`,current:true}, ] %>
                         <%- include('navigation.ejs',{data:data})%>
                             <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;">
 
-                                <h1 class="text-gray-600 text-2xl font-semibold text-center">Edit Election</h1>
+                                <h1 class="text-gray-600 text-2xl font-semibold text-center">Edit Question</h1>
                                 <form id="update_user" class="form">
                                     <input type="hidden" name="_csrf" value="<%=csrfToken%>" id="_csrf" />
-                                    <input type="hidden" name="electionId" value="<%=election.id%>" id="electionId" />
+                                    <input type="hidden" name="answerId" value="<%=answer.id%>" id="answerId" />
+                                    <input type="hidden" name="questionId" value="<%=question.id%>" id="questionId" />
+
                                     <div class="p-3">
-                                        <label for="title" class="text-gray-600 text-lg py-2">Title</label>
-                                        <input type="text" name="title" id="title" required minlength="2"
+                                        <label for="content" class="text-gray-600 text-lg py-2">content</label>
+                                        <input type="text" name="content" id="content" required minlength="2"
                                             class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"
-                                            value="<%=election.title%>" />
+                                            value="<%=answer.content%>" />
                                     </div>
 
                                     <div class="p-3">
@@ -53,22 +55,24 @@
 
         document.querySelector('.form').addEventListener('submit', e => {
             e.preventDefault()
-            const title = document.getElementById('title').value
+            const content = document.getElementById('content').value
             const cs = document.getElementById('_csrf').value
-            const id = document.getElementById('electionId').value
-            console.log(title, cs, id)
-            fetch(`/elections/${id}`, {
+            const id = document.getElementById('answerId').value
+            const questionId = document.getElementById('questionId').value
+
+            console.log(content, cs, id)
+            fetch(`/answers/${id}`, {
                 method: 'put',
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    title: title,
+                    content: content,
                     _csrf: cs
                 })
             }).then((res) => {
                 if (res.ok) {
-                    window.location.replace('/elections');
+                    window.location.replace(`/questions/${questionId}`);
                 }
-            }).catch((err) => alert(err.message))
+            }).catch((err) => window.alert(err.message))
         })
 
     </script>
