--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -22,7 +22,10 @@
               if(res.ok){
                   window.location.reload();
               }
-          }).catch((err)=>console.log(err))
+          }).catch((err)=>{
+          window.alert(err.message)
+          console.log({err})
+        })
       }
       function endElection(id){
          // let compelete = false
