--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -16,58 +16,36 @@
     tr:nth-child(even) {
       background: rgb(204 204 204 / 20%);
     }
-body{
-  font-family: 'Jost', sans-serif;
 
-}
+    body {
+      font-family: 'Jost', sans-serif;
+
+    }
+
     tr:hover {
       background: #c2c2c278;
     }
   </style>
   <script>
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
-    var currentId;
-    var selectedRow;
-    $(document).ready(function () {
 
-const element = document.getElementById("select1")
-const ck = element.options[element.selectedIndex].value
-var x = 0;
-
-})
-    function updateElection(id, title) {
-
-      console.log(title)
-      fetch(`/elections/${id}`, {
-        method: 'put',
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          title,
-          _csrf: token
-        })
-      }).then((res) => {
-        if (res.ok) {
-          window.location.reload();
-        }
-      }).catch((err) => console.log(err))
-    }
     function deleteElection(id) {
       var result = confirm("Are you sure?")
-      if(result){
+      if (result) {
         // const confilrm =  document.getElementById("confirmDelete").value
-      fetch(`/elections/${id}`, {
-        method: 'delete',
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          _csrf: token
-        })
-      }).then((res) => {
-        if (res.ok) {
-          window.location.reload();
-        }
-      }).catch((err) => console.log(err))
+        fetch(`/elections/${id}`, {
+          method: 'delete',
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            _csrf: token
+          })
+        }).then((res) => {
+          if (res.ok) {
+            window.location.reload();
+          }
+        }).catch((err) => console.log(err))
       }
- 
+
     }
   </script>
 </head>
@@ -94,12 +72,14 @@ var x = 0;
                   <p class="text-lg text-gray-500">You haven't created any elections</p>
                   <%}%>
                     <%if(elections.length> 0){%>
-                      <p class="text-lg text-gray-500">You have created <span class="text-gray-900 font-semibold"><%=elections.length%></span> elections</p>
+                      <p class="text-lg text-gray-500">You have created <span class="text-gray-900 font-semibold">
+                          <%=elections.length%>
+                        </span> elections</p>
                       <%}%>
 
               </div>
               <%if(elections.length> 0){%>
-                <table class="text-left w-full mt-5 overflow-y-scroll" >
+                <table class="text-left w-full mt-5 overflow-y-scroll">
                   <thead class="bg-black flex text-white w-full" style="background-color: black;">
                     <tr class="flex w-full mb-4">
                       <th class='px-4 py-2 w-1/4 text text-lg'>No.</th>
@@ -110,7 +90,7 @@ var x = 0;
                   </thead>
                   <!-- Remove the nasty inline CSS fixed height on production and replace it with a CSS class — this is just for demonstration purposes! -->
                   <tbody class="bg-grey-light flex flex-col items-center justify-start overflow-y-auto w-full"
-                  style="height: 40vh;" >
+                    style="height: 40vh;">
                     <%for(var i=0;i<elections.length;i++){%>
 
                       <tr class="flex w-full mb-4">
@@ -122,9 +102,9 @@ var x = 0;
                             <%=elections[i].title%>
                           </a>
                         </td>
-                          <td class="p-4 w-1/4 text-lg">
-                            <%=elections[i].url%>
-                          </td>
+                        <td class="p-4 w-1/4 text-lg">
+                          <%=elections[i].url%>
+                        </td>
                         <td class="p-4 w-1/4">
                           <div class="flex justify-between">
                             <a href="/elections/<%=elections[i].id%>/edit">
@@ -133,6 +113,7 @@ var x = 0;
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                               </svg></a>
+
                             <a href='' onclick="deleteElection('<%=elections[i].id%>')">
                               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="w-5 h-6 stroke-red-600">
@@ -140,7 +121,6 @@ var x = 0;
                                   d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                               </svg>
                             </a>
-
                           </div>
                         </td>
 
@@ -150,51 +130,11 @@ var x = 0;
                   </tbody>
                 </table>
                 <%}%>
-                 
 
-                  <!-- Main modal -->
-                  <%for(var i=0;i<elections.length;i++){%>
-                  <div id="authentication-modal-<%=elections[i].id%>" tabindex="-1" aria-hidden="true"
-                    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full">
-                    <div class="relative w-full h-full max-w-md md:h-auto">
-                      <!-- Modal content -->
-                      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                        <button type="button"
-                          class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
-                          data-modal-hide="authentication-modal">
-                          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                              clip-rule="evenodd"></path>
-                          </svg>
-                          <span class="sr-only">Close modal</span>
-                        </button>
-                        <div class="px-6 py-6 lg:px-8">
-                          <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Edit Election</h3>
-                          <form class="space-y-6" action="" method="" onsubmit="event.preventDefault();(updateElection('<%=elections[i].id%>'))">
-                            <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
-
-                            <div>
-                              <label for="title"
-                                class="block mb-2 text-md font-medium text-gray-900 dark:text-white">Title</label>
-                              <input type="text" name="title" id="title"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-                                placeholder="name@company.com" required>
-                            </div>
-
-                            <button type="submit"
-                              class="w-full text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-md px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">SUBMIT</button>
-
-                          </form>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <%}%>
         </div>
       </div>
   </main>
+
 </body>
 
 </html>
