--- a/views/manageQuestions.ejs
+++ b/views/manageQuestions.ejs
@@ -13,20 +13,7 @@
   <script>
     var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
     var currentId;
-    function updateQuestion(id, title) {
-      fetch(`/questions/${id}`, {
-        method: 'put',
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          title,
-          _csrf: token
-        })
-      }).then((res) => {
-        if (res.ok) {
-          window.location.reload();
-        }
-      }).catch((err) => console.log(err))
-    }
+ 
     function deleteQuestion(id) {
       var result = confirm("Are you sure?")
       if(result){
@@ -101,13 +88,12 @@
                               </td>
                               <td class="p-4 w-1/4">
                                 <div class="flex justify-between">
-                                  <button data-modal-target="authentication-modal"
-                                    data-modal-toggle="authentication-modal">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                      stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-green-600">
+                                  <a href="/questions/<%=questions[i].id%>/edit">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                      stroke="currentColor" class="w-5 h-6 stroke-green-600">
                                       <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
-                                    </svg></button>
+                                    </svg></a>
                                   <a href='' onclick="deleteQuestion('<%=questions[i].id%>')">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                       stroke-width="1.5" stroke="currentColor" class="w-5 h-6 stroke-red-600">
